objects/MedProSC__MedProAddress__c.object
<CustomObject>
    <fields>
        <fullName>MedProSC__Address_City__c</fullName>
        <label>Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_RDI__c</fullName>
        <label>Address RDI</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_Source__c</fullName>
        <label>Address Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SLN</fullName>
                </value>
                <value>
                    <fullName>DEA</fullName>
                </value>
                <value>
                    <fullName>AMA</fullName>
                </value>
                <value>
                    <fullName>NPI-Practice</fullName>
                </value>
                <value>
                    <fullName>NPI-Mailing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProSC__Address_State__c</fullName>
        <label>Address State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Address_Zip__c</fullName>
        <label>Address Zip</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Clean_Address__c</fullName>
        <formula>UPPER(SUBSTITUTE(SUBSTITUTE(MedProSC__Address_Line_1__c &amp; MedProSC__Address_Line_2__c &amp; MedProSC__Address_City__c &amp; MedProSC__Address_State__c &amp; MedProSC__Address_Zip__c,&quot; &quot;,&quot;&quot;),&quot;.&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clean Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Display_Address__c</fullName>
        <formula>AND(NOT(MedProSC__Dupe_Check__c), MedProSC__RDI_Check__c, MedProSC__PO_Box_Check__c, NOT(MedProSC__Address_Line_1__c=&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Dupe_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Full_Address__c</fullName>
        <formula>SUBSTITUTE(
MedProSC__Address_Line_1__c &amp; If(ISBLANK(MedProSC__Address_Line_2__c), &quot;&quot;,&quot;, &quot;&amp; MedProSC__Address_Line_2__c) &amp; BR()&amp; MedProSC__Address_City__c &amp; if (ISBLANK(MedProSC__Address_State__c), &apos; &apos;, &apos;, &apos; + MedProSC__Address_State__c) &amp; &quot; &quot; &amp; MedProSC__Address_Zip__c, &quot;**&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MedPro Multiline Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Last_MedPro_Update__c</fullName>
        <label>Last MedPro Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_Number__c</fullName>
        <label>License Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_Short2__c</fullName>
        <formula>MedProSC__License_State__c &amp; &quot; : &quot; &amp; MedProSC__License_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_Short__c</fullName>
        <label>License Depreciated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_State__c</fullName>
        <label>License State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License_Status__c</fullName>
        <label>License Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__License__c</fullName>
        <label>License</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProID__c</fullName>
        <label>MedProID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedProMasterID__c</fullName>
        <label>MedProMasterID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__PO_Box_Check__c</fullName>
        <formula>IF(CONTAINS(MedProSC__Clean_Address__c,&quot;BOX&quot;), 
NOT(ISNUMBER(MID(MedProSC__Clean_Address__c, FIND(&quot;BOX&quot;,MedProSC__Clean_Address__c)+3,1))), 
true )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not a PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__RDI_Check__c</fullName>
        <description>IF( 
OR( 
TEXT(MedProSC__Address_Source__c) = &quot;DEA&quot;, 
TEXT(MedProSC__Address_Source__c) = &quot;NPI - Practice&quot;, 
NOT(OR( 
IF( Contains(MedProSC__Address_Line_1__c,&quot;1&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;2&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;3&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;4&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;5&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;6&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;7&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;8&quot;),true, 
IF( Contains(MedProSC__Address_Line_1__c,&quot;9&quot;),true,false)))))))))) 
)), 
true, 
IF(MedProSC__Address_RDI__c = &quot;B&quot;,true,false) 
)</description>
        <formula>OR
(
  TEXT(MedProSC__Address_Source__c) = &quot;DEA&quot;,
  TEXT(MedProSC__Address_Source__c) = &quot;NPI-Practice&quot;,
  TEXT(MedProSC__Address_Source__c) = &quot;Manual&quot;,
  TEXT(MedProSC__Address_Source__c) = &quot;MPC&quot;,
  NOT
  (
    OR
    (
      Contains(MedProSC__Address_Line_1__c,&quot;1&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;2&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;3&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;4&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;5&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;6&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;7&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;8&quot;),
      Contains(MedProSC__Address_Line_1__c,&quot;9&quot;)
    )
  ),
  MedProSC__Address_RDI__c == &quot;B&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RDI Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__State_Is_Licensed__c</fullName>
        <formula>MedProSC__Address_State__c == MedProSC__License_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Is Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Status_Icon2__c</fullName>
        <formula>IF(
   MedProSC__License_Status__c == &apos;Y&apos;, 
   IMAGE(&quot;/resource/1509113908000/MedProSC__GreenDot&quot;, &quot;Green&quot;, 16, 16), 
   IF(
       MedProSC__License_Status__c == &apos;N&apos;,  
       IMAGE(&quot;/resource/1509113744000/MedProSC__RedSquare&quot;, &quot;Red&quot;, 16, 16),  
       IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Yellow&quot;, 16, 16)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Status_Icon__c</fullName>
        <label>Status Depreciated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Territories__c</fullName>
        <label>Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro Address</label>
    <listViews>
        <fullName>MedProSC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MPA-{0000000000}</displayFormat>
        <label>MedProAddress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>